# DnD-Character-Sheet-Program

./: AGENTS.md  README.md  dev.cmd  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: DEVELOPER_WORKFLOW.md  ROADMAP.md  STORE_AUDIT.md
src/: App.css  App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: CharacterLibrary.test.tsx  CharacterLibrary.tsx  CreateCharacterDialog.test.tsx  CreateCharacterDialog.tsx  InspectorPanel.test.tsx  InspectorPanel.tsx  SheetWorkspace.tsx
src/lib/: character.test.ts  character.ts  characterEditingGuidance.test.ts  characterEditingGuidance.ts  characterPresentation.test.ts  characterPresentation.ts  characterRepository.test.ts  characterRepository.ts  createCharacterGuidance.test.ts  createCharacterGuidance.ts  createCharacterPresets.test.ts  createCharacterPresets.ts  statusFeedback.test.ts  statusFeedback.ts  tauri.ts
src/store/: useCharacterStore.test.ts  useCharacterStore.ts
