[package]
name = "wyrdsheet"
version = "0.1.0"
description = "A paper-inspired D&D character sheet desktop app"
authors = ["Dylan Umphress"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wyrdsheet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
anyhow = "1.0.102"
walkdir = "2.5.0"
zip = "8.2.0"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
base64 = "0.22.1"
time = { version = "0.3.47", features = ["formatting"] }
